src/components/Header/Header.scss
/**
 * React Starter Kit (https://www.reactstarterkit.com/)
 *
 * Copyright © 2014-2016 Kriasoft, LLC. All rights reserved.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE.txt file in the root directory of this source tree.
 */

@import '../../styles/_variables.scss';

@-webkit-keyframes animatedBackground {
  from {
    transform: translate3d(0, 0, 0);
  }

  to {
    transform: translate3d(300px, -300px, 0);
  } 
}

.root {
  position: relative;
}

.background {
  animation: animatedBackground infinite 15s linear;
  background-image: url('./background.svg');
  height: 600px;
  left: -300px;
  position: absolute;
  width: 200%;
  z-index: 0;
}

.container {
  margin: 0 auto;
  padding: 10px 0;
  position: relative;
  max-width: $max-content-width;
  z-index: 1;
}

.brand {
  text-decoration: none;
  font-size: 1.75em; /* ~28px */
}

.brandTxt {
  margin-left: 10px;
}

.nav {
  float: right;
  margin-top: 6px;
}

.banner {
  text-align: center;
}

.bannerTitle {
  background: url('./lunch.png') no-repeat center;
  background-size: contain;
  font-size: 5em;
  margin: 0;
  padding: 10px;

  a {
    display: block;
    overflow: hidden;
    text-indent: 100%;
    white-space: nowrap;
  }
}

.flashes {
  position: fixed;
  width: 100%;
  z-index: 1;
}

@media only screen and (max-height: 500px) {
  .bannerTitle {
    font-size: 4em;
  }
}

